tests/ui/ferrocene/compiler-arguments/remap-path-prefix/remap-path-prefix_multiple-reverse.stderr
error[E0425]: cannot find value `this_error_is_here_to_generate_stderr_file` in this scope
  --> foo/ferrocene/compiler-arguments/remap-path-prefix/remap-path-prefix_multiple-reverse.rs:12:5
   |
LL |     this_error_is_here_to_generate_stderr_file
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
